# Mini-CAD

./: CMakeLists.txt  main.cpp
app/: MainWindow.cpp  MainWindow.h
src/commands/: CommandHistory.cpp  CommandHistory.h
src/io/: FileIO.cpp  FileIO.h
src/model/: Document.cpp  Document.h
src/viewer/: OccView.cpp  OccView.h
src/widgets/: BooleanDialog.cpp  BooleanDialog.h  MeasureDialog.cpp  MeasureDialog.h  MirrorDialog.cpp  MirrorDialog.h  ModelTreeWidget.cpp  ModelTreeWidget.h  PatternDialog.cpp  PatternDialog.h  PrimitiveDialog.cpp  PrimitiveDialog.h  PropertyPanel.cpp  PropertyPanel.h  TransformDialog.cpp  TransformDialog.h
tests/: CMakeLists.txt  tst_CommandHistory.cpp  tst_FileIO.cpp  tst_Measure.cpp  tst_RebuildShape.cpp
